<resources>
    <string name="disclaimer">NOTICE: Tk-Squared, LLC does not own, operate, or have any affiliation with the websites and radio streams available through the use of this app. Those sites/streams remain the property and responsibility of their respective owners and operators. Any requests for money are coming from website owners. This app is 100% free and TK-Squared, LLC will never ask you for money in this app.</string>
    <string name="app_name">Varmint</string>
    <string name="version_name">Version:  </string>
    <string name="compile_date">Compiled on: </string>
    <string name="privacy_policy">Our privacy policy: http://tk-squared.com/Varmint/privacy.html</string>
    <string name="company">TK-Squared, LLC</string>
    <string name="subtitle">Country Stations</string>
    <string name="station_title">Station Title</string>
    <string name="station_subtitle">Station Subtitle</string>
    <string name="share_message">Listening to awesome </string>
    <string name="share_title">Share</string>
    <string name="get_message">Get Varmint! Free Country for your Android!</string>
    <string name="download_url">https://play.google.com/store/apps/details?id=com.tk_squared.varmint</string>
    <string name="icon_description">Station Icon</string>
    <string name="splash_description">TK-Squared Logo</string>
    <string name="menu_fetch_title">Check For new List</string>
    <string name="menu_edit_title">Edit List</string>
    <string name="menu_about_title">About Varmint</string>
    <string name="web_page_url">http://www.tk-squared.com/Varmint</string>
    <string name="app_id_string">com.tk_squared.varmint</string>
    <string name="app_icon_url">http://www.tk-squared.com/Varmint/varmint_icon.png</string>
    <string name="stations_list_url">http://tk-squared.com/Varmint/stations_.json</string>
    <integer name="smaato_pub_id">1100018452</integer>
    <integer name="smaato_ad_id">130087931</integer>
    <string name="smaato_pub_id_str">1100018452</string>
    <string name="smaato_ad_id_str">130087931</string>
    <integer name="smaato_inter_id">130097262</integer>
    <integer name="smaato_reload_delay">20</integer>
    <integer name="about_screen_delay">15000</integer>
    <integer name="smaato_interstitial_reload_delay">60000</integer>
</resources>
