<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/splash"
        android:contentDescription="@string/splash_description"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="130dp"
        android:layout_centerInParent="true">
        <TextView
            android:id="@+id/about_app_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textIsSelectable="false"
            android:autoLink="all"
            android:gravity="center"
            android:layout_centerHorizontal="true"
            android:text="@string/version_name"/>
        <TextView
            android:id="@+id/about_app_url"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textIsSelectable="false"
            android:autoLink="all"
            android:gravity="center"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/about_app_version"
            android:text="@string/web_page_url"/>
        <TextView
            android:id="@+id/privacy_url"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textIsSelectable="false"
            android:autoLink="all"
            android:gravity="center"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/about_app_url"
            android:text="@string/privacy_policy"/>
        <TextView
            android:id="@+id/about_app_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textIsSelectable="false"
            android:autoLink="all"
            android:gravity="center"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/privacy_url"
            android:text="@string/compile_date"/>
        <TextView
            android:id="@+id/about_co_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textIsSelectable="false"
            android:autoLink="all"
            android:gravity="center"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/about_app_date"
            android:text="@string/company"/>
        <TextView
            android:id="@+id/disclaimer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textIsSelectable="false"
            android:layout_centerInParent="true"
            android:layout_below="@+id/about_co_name"
            android:text="@string/disclaimer"/>
    </RelativeLayout>
</RelativeLayout>